update hàm tìm kiếm hàng v2

--- a/views/products.jade
+++ b/views/products.jade
@@ -77,7 +77,7 @@ html
 						seller_id: table.rows[i].cells[1].innerHTML,
 						name: table.rows[i].cells[2].innerHTML,
 						price: table.rows[i].cells[3].innerHTML,
-						decription: table.rows[i].cells[4].innerHTML,
+						description: table.rows[i].cells[4].innerHTML,
 						image_url: table.rows[i].cells[5].innerHTML,
 						status: table.rows[i].cells[6].innerHTML,
 						type: table.rows[i].cells[7].innerHTML
