edit user function

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,7 +30,7 @@ html
               li
                 a#login(href='/users/login') Login
               li
-                a#username(href='/users/user') username
+                a#username(href='/users/') username
               li
                 a#logout(onclick='logout()') logout
             ul.secondary
