fix bug user database change

--- a/views/user_login.jade
+++ b/views/user_login.jade
@@ -21,6 +21,12 @@ block content
                   td Password*
                   td
                     input#txtpassword(type='password', required='')
+                tr
+                  td  Role
+                  td
+                    select#role
+                      option(value='buyer') Buyer
+                      option(value='seller') Seller
             input#policy(type='checkbox')
             |             I agree to the Terms of Use and Privacy Policy
             p
